@@ -42,6 +42,9 @@ import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 
+import com.google.common.cache.CacheStats;
+import com.google.common.cache.LoadingCache;
+
 import org.apache.zookeeper.AsyncCallback;
 import org.apache.zookeeper.KeeperException.Code;
 import org.apache.zookeeper.WatchedEvent;
@@ -219,6 +222,20 @@ public final class HBaseClient {
   private volatile short flush_interval = 1000;  // ms
 
   /**
+   * How many different counters do we want to keep in memory for buffering.
+   * Each entry requires storing the table name, row key, family name and
+   * column qualifier, plus 4 small objects.
+   *
+   * Assuming an average table name of 10 bytes, average key of 20 bytes,
+   * average family name of 10 bytes and average qualifier of 8 bytes, this
+   * would require 65535 * (10 + 20 + 10 + 8 + 4 * 32) / 1024 / 1024 = 11MB
+   * of RAM, which isn't too excessive for a default value.  Of course this
+   * might bite people with large keys or qualifiers, but then it's normal
+   * to expect they'd tune this value to cater to their unusual requirements.
+   */
+  private volatile int increment_buffer_size = 65535;
+
+  /**
    * Factory through which we will create all its channels / sockets.
    */
   private final ClientSocketChannelFactory channel_factory;
@@ -344,6 +361,19 @@ public final class HBaseClient {
     new ConcurrentSkipListMap<byte[], ArrayList<HBaseRpc>>(RegionInfo.REGION_NAME_CMP);
 
   /**
+   * Buffer for atomic increment coalescing.
+   * This buffer starts out null, and remains so until the first time we need
+   * to buffer an increment.  Once lazily initialized, this buffer will never
+   * become null again.
+   * <p>
+   * We do this so that we can lazily schedule the flush timer only if we ever
+   * have buffered increments.  Applications without buffered increments don't
+   * need to pay any memory for the buffer or any CPU time for a useless timer.
+   * @see #setupIncrementCoalescing
+   */
+  private volatile LoadingCache<BufferedIncrement, BufferedIncrement.Amount> increment_buffer;
+
+  /**
    * Constructor.
    * @param quorum_spec The specification of the quorum, e.g.
    * {@code "host1,host2,host3"}.
@@ -435,6 +465,13 @@ public final class HBaseClient {
    * everything that was buffered at the time of the call has been flushed.
    */
   public Deferred<Object> flush() {
+    {
+      final LoadingCache<BufferedIncrement, BufferedIncrement.Amount> buf =
+        increment_buffer;  // Single volatile-read.
+      if (buf != null) {
+        flushBufferedIncrements(buf);
+      }
+    }
     final ArrayList<Deferred<Object>> d =
       new ArrayList<Deferred<Object>>(client2regions.size()
                                       + got_nsre.size() * 8);
@@ -485,14 +522,55 @@ public final class HBaseClient {
    * @throws IllegalArgumentException if {@code flush_interval < 0}.
    */
   public short setFlushInterval(final short flush_interval) {
+    // Note: if we have buffered increments, they'll pick up the new flush
+    // interval next time the current timer fires.
     if (flush_interval < 0) {
       throw new IllegalArgumentException("Negative: " + flush_interval);
     }
-    try {
-      return this.flush_interval;
-    } finally {
-      this.flush_interval = flush_interval;
+    final short prev = this.flush_interval;
+    this.flush_interval = flush_interval;
+    return prev;
+  }
+
+  /**
+   * Changes the size of the increment buffer.
+   * <p>
+   * <b>NOTE:</b> because there is no way to resize the existing buffer,
+   * this method will flush the existing buffer and create a new one.
+   * This side effect might be unexpected but is unfortunately required.
+   * <p>
+   * This determines the maximum number of counters this client will keep
+   * in-memory to allow increment coalescing through
+   * {@link #bufferAtomicIncrement}.
+   * <p>
+   * The greater this number, the more memory will be used to buffer
+   * increments, and the more efficient increment coalescing can be
+   * if you have a high-throughput application with a large working
+   * set of counters.
+   * <p>
+   * If your application has excessively large keys or qualifiers, you might
+   * consider using a lower number in order to reduce memory usage.
+   * @param increment_buffer_size The new size of the buffer.
+   * @return The previous size of the buffer.
+   * @throws IllegalArgumentException if {@code increment_buffer_size < 0}.
+   * @since 1.3
+   */
+  public int setIncrementBufferSize(final int increment_buffer_size) {
+    if (increment_buffer_size < 0) {
+      throw new IllegalArgumentException("Negative: " + increment_buffer_size);
     }
+    final int current = this.increment_buffer_size;
+    if (current == increment_buffer_size) {
+      return current;
+    }
+    this.increment_buffer_size = increment_buffer_size;
+    final LoadingCache<BufferedIncrement, BufferedIncrement.Amount> prev =
+      increment_buffer;  // Volatile-read.
+    if (prev != null) {  // Need to resize.
+      makeIncrementBuffer();  // Volatile-write.
+      flushBufferedIncrements(prev);
+    }
+    return current;
   }
 
   /**
@@ -517,10 +595,35 @@ public final class HBaseClient {
    * <p>
    * The default value is an unspecified and implementation dependant, but is
    * guaranteed to be non-zero.
+   * <p>
+   * A return value of 0 indicates that edits are sent directly to HBase
+   * without being buffered.
    * @see #setFlushInterval
    */
   public short getFlushInterval() {
     return flush_interval;
+  }
+
+  /**
+   * Returns the capacity of the increment buffer.
+   * <p>
+   * Note this returns the <em>capacity</em> of the buffer, not the number of
+   * items currently in it.  There is currently no API to get the current
+   * number of items in it.
+   * @since 1.3
+   */
+  public int getIncrementBufferSize() {
+    return increment_buffer_size;
+  }
+
+  /**
+   * Returns statistics from the buffer used to coalesce increments.
+   * @since 1.3
+   */
+  public CacheStats incrementBufferStats() {
+    final LoadingCache<BufferedIncrement, BufferedIncrement.Amount> cache =
+      increment_buffer;
+    return cache != null ? cache.stats() : BufferedIncrement.ZERO_STATS;
   }
 
   /**
@@ -887,6 +990,163 @@ public final class HBaseClient {
   public Deferred<Long> atomicIncrement(final AtomicIncrementRequest request) {
     return sendRpcToRegion(request).addCallbacks(icv_done,
                                                  Callback.PASSTHROUGH);
+  }
+
+  /**
+   * Buffers a durable atomic increment for coalescing.
+   * <p>
+   * This increment will be held in memory up to the amount of time allowed
+   * by {@link #getFlushInterval} in order to allow the client to coalesce
+   * increments.
+   * <p>
+   * <strong>Node: This method only works with positive increments.</strong>
+   * Also note that if the amount is greater than or equal to
+   * {@link Short#MAX_VALUE}, the increment cannot be buffered and will be
+   * sent directly.
+   * <p>
+   * Increment coalescing can dramatically reduce the number of RPCs and write
+   * load on HBase if you tend to increment multiple times the same working
+   * set of counters.  This is very common in user-facing serving systems that
+   * use HBase counters to keep track of user actions.
+   * <p>
+   * If client-side buffering is disabled ({@link #getFlushInterval} returns
+   * 0) then this function has the same effect as calling
+   * {@link #atomicIncrement(AtomicIncrementRequest)}.
+   * @param request The increment request.
+   * @return The deferred {@code long} value that results from the increment.
+   * @throws IllegalArgumentException if {@code request.getAmount() < 0}
+   * @since 1.3
+   */
+  public Deferred<Long> bufferAtomicIncrement(final AtomicIncrementRequest request) {
+    final long value = request.getAmount();
+    if (value < 0) {
+      throw new IllegalArgumentException("Cannot buffer atomic increment with"
+                                         + " negative amount: " + request);
+    } else if (value >= Short.MAX_VALUE   // Value to large to safely coalesce.
+               || flush_interval == 0) {  // Client-side buffer disabled.
+      return atomicIncrement(request);
+    }
+
+    final BufferedIncrement incr =
+      new BufferedIncrement(request.table(), request.key(), request.family(),
+                            request.qualifier());
+    final short delta = (short) value;
+    do {
+      BufferedIncrement.Amount amount;
+      // Semi-evil: the very first time we get here, `increment_buffer' will
+      // still be null (we don't initialize it in our constructor) so we catch
+      // the NPE that ensues to allocate the buffer and kick off a timer to
+      // regularly flush it.
+      try {
+        amount = increment_buffer.getUnchecked(incr);
+      } catch (NullPointerException e) {
+        setupIncrementCoalescing();
+        amount = increment_buffer.getUnchecked(incr);
+      }
+      if (amount.addAndGet(delta) < 0) {
+        // Race condition.  We got something out of the buffer, but in the mean
+        // time another thread picked it up and decided to send it to HBase. So
+        // we need to retry, which will create a new entry in the buffer.
+        amount.addAndGet(-delta);  // Undo our previous addAndGet.
+        // Loop again to retry.
+      } else {
+        final Deferred<Long> deferred = new Deferred<Long>();
+        amount.deferred.chain(deferred);
+        return deferred;
+      }
+    } while(true);
+  }
+
+  /**
+   * Called the first time we get a buffered increment.
+   * Lazily creates the increment buffer and sets up a timer to regularly
+   * flush buffered increments.
+   */
+  private synchronized void setupIncrementCoalescing() {
+    // If multiple threads attempt to setup coalescing at the same time, the
+    // first one to get here will make `increment_buffer' non-null, and thus
+    // subsequent ones will return immediately.  This is important to avoid
+    // creating more than one FlushBufferedIncrementsTimer below.
+    if (increment_buffer != null) {
+      return;
+    }
+    makeIncrementBuffer();  // Volatile-write.
+
+    // Start periodic buffered increment flushes.
+    final class FlushBufferedIncrementsTimer implements TimerTask {
+      public void run(final Timeout timeout) {
+        try {
+          flushBufferedIncrements(increment_buffer);
+        } finally {
+          final short interval = flush_interval; // Volatile-read.
+          // Even if we paused or disabled the client side buffer by calling
+          // setFlushInterval(0), we will continue to schedule this timer
+          // forever instead of pausing it.  Pausing it is troublesome because
+          // we don't keep a reference to this timer, so we can't cancel it or
+          // tell if it's running or not.  So let's just KISS and assume that
+          // if we need the timer once, we'll need it forever.  If it's truly
+          // not needed anymore, we'll just cause a bit of extra work to the
+          // timer thread every 100ms, no big deal.
+          timer.newTimeout(new FlushBufferedIncrementsTimer(),
+                           interval > 0 ? interval : 100, MILLISECONDS);
+        }
+      }
+    }
+    final short interval = flush_interval; // Volatile-read.
+    // Handle the extremely unlikely yet possible racy case where:
+    //   flush_interval was > 0
+    //   A buffered increment came in
+    //   It was the first one ever so we landed here
+    //   Meanwhile setFlushInterval(0) to disable buffering
+    // In which case we just flush whatever we have in 1ms.
+    timer.newTimeout(new FlushBufferedIncrementsTimer(),
+                     interval > 0 ? interval : 1, MILLISECONDS);
+  }
+
+  /**
+   * Flushes all buffered increments.
+   * @param increment_buffer The buffer to flush.
+   */
+  private static void flushBufferedIncrements(// JAVA Y U NO HAVE TYPEDEF? F U!
+    final LoadingCache<BufferedIncrement, BufferedIncrement.Amount> increment_buffer) {
+    // Calling this method to clean up before shutting down works solely
+    // because `invalidateAll()' will *synchronously* remove everything.
+    // The Guava documentation says "Discards all entries in the cache,
+    // possibly asynchronously" but in practice the code in `LocalCache'
+    // works as follows:
+    //
+    //   for each segment:
+    //     segment.clear
+    //
+    // Where clearing a segment consists in:
+    //
+    //   lock the segment
+    //   for each active entry:
+    //     add entry to removal queue
+    //   null out the hash table
+    //   unlock the segment
+    //   for each entry in removal queue:
+    //     call the removal listener on that entry
+    //
+    // So by the time the call to `invalidateAll()' returns, every single
+    // buffered increment will have been dealt with, and it is thus safe
+    // to shutdown the rest of the client to let it complete all outstanding
+    // operations.
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Flushing " + increment_buffer.size() + " buffered increments");
+    }
+    increment_buffer.invalidateAll();
+  }
+
+  /**
+   * Creates the increment buffer according to current configuration.
+   */
+  private void makeIncrementBuffer() {
+    final int size = increment_buffer_size;
+    increment_buffer = BufferedIncrement.newCache(this, size);
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Created increment buffer of " + size + " entries");
+    }
   }
 
   /** Singleton callback to handle responses of incrementColumnValue RPCs.  */
